@@ -1764,80 +1764,6 @@ void HouseGridDisplay::drawTiles( char inBeneathShadowsOnly ) {
                 houseTileFade = 1;
                 }
 
-            if( houseTileFade < 1 ) {
-                // Wants to fade
-                
-                // make sure that we don't have unfaded neighbors
-                // (drawing a faded tile next to a non-faded one looks
-                //  jarring, with things popping into view as the player
-                //  moves around and the fades change)
-                
-                // use 8-direction neighbors here, because it 
-                // matches visibility under shroud better (to avoid pop-in)
-                // (for sub-classes that use a shroud)
-
-                // never be more faded than our most visible non-obstructing
-                // neighbor
-                float brightestNonObstructingNeighbor = houseTileFade;
-
-                // special case for walls:
-                // consider vision blocking neighbors too, as long
-                // as they aren't walls (walls block sight of other walls
-                // and doors, but doors do not block sight of walls)
-                char isWall = isSubMapPropertySet( i, wall );
-                
-                // tiles with 16 orientations connect with their same-type
-                // (and in-group type) neighbors and look weird if cut off
-                // due to visibility
-                char isConnectable = 
-                    ( getNumOrientations( houseTile, 0 ) == 16 );
-                
-
-                for( int n=0; n<8; n++ ) {
-            
-                    int neighborIndex = getTileNeighborEight( fullI, n );
-
-                    if( neighborIndex != -1
-                        &&
-                        mHouseMapCellFades[neighborIndex] > 
-                            brightestNonObstructingNeighbor ) {
-                        
-                        if( isConnectable && 
-                            isInGroup( houseTile, 
-                                       mHouseMapIDs[neighborIndex] ) ) {
-                            // consider brightness of connected neighbors
-                            // no matter what
-                            brightestNonObstructingNeighbor =
-                                mHouseMapCellFades[neighborIndex];
-                            }
-                        else {
-                            // not connected with neighbor
-
-                            if( isWall &&
-                                ! isMapPropertySet( neighborIndex, wall ) ) {
-                                // for walls,
-                                // consider brightness of non-wall neighbors
-                                // which don't fully block vision of 
-                                // walls
-                                brightestNonObstructingNeighbor =
-                                    mHouseMapCellFades[neighborIndex];
-                                }
-                            else if( ! isMapPropertySet( neighborIndex, 
-                                                         visionBlocking ) ) {
-                                // for non-walls,
-                                // only consider brightness of
-                                // non-vision-blocking neighbors
-                                brightestNonObstructingNeighbor =
-                                    mHouseMapCellFades[neighborIndex];
-                                }
-                            }
-                        }
-                    }
-                
-
-                // fade in and out with our brightest visible neighbor
-                houseTileFade = brightestNonObstructingNeighbor;
-                }
             
             char touched = mHouseMapSpotsTouched[fullI];
             
